<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/flecha"
        android:onClick="principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha" />

    <TextView
        android:id="@+id/titulo2"
        style="@style/tituloReceta"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/titulo13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                style="@style/tituloIngrediente_y_Preparacion"
                android:text="@string/ingredientes" />

            <TextView
                android:id="@+id/textView7"
                style="@style/textoDeRecetas"
                android:gravity="center_horizontal"
                android:text="@string/ingredientesPlatillo3"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="95dp" />

            <TextView
                android:id="@+id/textView9"
                style="@style/tituloIngrediente_y_Preparacion"
                android:text="@string/preparacion" />

            <TextView
                android:id="@+id/textView10"
                style="@style/textoDeRecetas"
                android:text="@string/preparacionPlatillo3" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>