<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        style="@style/titulo"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/titulo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_width="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                style="@style/titulo2"
                android:text="@string/titulo11" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/titulo11"
                    app:srcCompat="@drawable/salchichas_a_la_diabla" />

                <Button
                    android:id="@+id/button"
                    style="@style/boton"
                    android:layout_weight="1"
                    android:onClick="salchicas"
                    android:text="@string/info1"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                style="@style/titulo2"
                android:text="@string/titulo12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/titulo12"
                    app:srcCompat="@drawable/rajas_poblanas" />

                <Button
                    android:id="@+id/button2"
                    style="@style/boton"
                    android:layout_weight="1"
                    android:contentDescription="@string/titulo12"
                    android:onClick="rajas"
                    android:text="@string/info2"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView14"
                style="@style/titulo2"
                android:text="@string/titulo13" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/titulo13"
                    app:srcCompat="@drawable/asado_de_puerco" />

                <Button
                    android:id="@+id/button3"
                    style="@style/boton"
                    android:layout_weight="1"
                    android:onClick="asado"
                    android:text="@string/info3"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView15"
                style="@style/titulo2"
                android:text="@string/titulo14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/titulo14"
                    app:srcCompat="@drawable/pierna_en_salsa_de_pina" />

                <Button
                    android:id="@+id/button4"
                    style="@style/boton"
                    android:layout_weight="1"
                    android:onClick="pierna_pina"
                    android:text="@string/info4"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView16"
                style="@style/titulo2"
                android:text="@string/titulo15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/titulo15"
                    app:srcCompat="@drawable/pierna_al_horno" />

                <Button
                    android:id="@+id/button5"
                    style="@style/boton"
                    android:layout_weight="1"
                    android:contentDescription="@string/titulo15"
                    android:onClick="pierna_horno"
                    android:text="@string/info5"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>